--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>JavaScript current day and time</title> 
-    </head>
-    <body>
-        <script src="daytime.js">
-            </script>
-        </body>
-    </html>
+<!DOCTYPE html> 
+<html> 
+
+<head> 
+	<title> 
+		 Window Print() method 
+	</title> 
+
+	<script type="text/javascript"> 
+	</script> 
+
+</head> 
+
+<body> 
+
+	<h2>This is JavaScript</h2> 
+	<form> 
+		<input type="button" value="Print"
+			onclick="window.print()" /> 
+	</form> 
+
+</body> 
+<html> 
