--- a/1stassign.html
+++ b/1stassign.html
@@ -1,22 +1,45 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ASSIGNMENT 1 DAY 4</title>
-  
+ <title>even or odd</title>
+ <style type="text/css">
+  ul{
+   border: 1px solid;
+   position: relative;
+   left: 35%;
+   top: 10%;
+   width: 300px;
+   height: 100px;
+   padding-top: 30px;
 
+
+  }
+  .input{
+   margin-top: 30px;
+  }
+ </style>
 </head>
-
 <body>
-  <h2>ASSIGNMENT 1 DAY 4</h2>
-  <script>
-    for(let i=1;i<=100;i++){
-      if (i%3===0 && i%5===0) console.log(`${i} = "FizzBuzz"`);
-      else if (i%3===0) console.log(`${i} = "Fizz"`);
-      else if (i%5===0) console.log(`${i} = "Buzz"`);
-    }
-  </script>
+ <ul>
+  <form>
+   <label>Enter number</label>
+   <input type="text"  name="number" id="uval" placeholder="enetr number">
+   <button type="button" class="input" onclick="evenodd()">Click to check</button>
+  </form>
+  <div id="rblock"></div>
+   </ul>
+ <script type="text/javascript">
+  function evenodd(){
+   var x = document.getElementById("uval").value;
+   x = parseInt(x);
+   if(x%2 == 0){
+    console.log("The number entered  " + x + "  and  Number is'EVEN'");
+   }
+   else{
+    console.log("The number entered  " + x + "  and  Number is'ODD'");
+   }
+  }
+ </script>
+
 </body>
 </html>
