--- a/2ndassign.html
+++ b/2ndassign.html
@@ -1,42 +1,20 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ASSIGNMENT 2 DAY 4</title>
-  
-
-</head>
-
+<!DOCTYPE html>
+<html>
 <body>
-  <h2>ASSIGNMENT 2 DAY 4</h2>
-  <script>
-    const student={
-      name : 'Helsinki',
-      age : 24,
-      projects : {
-        diceGame : 'Two player dice game using JavaScript'
-        
-      }
-    };
-    
-    const{name,age,projects:{diceGame}}=student;
-    console.log(`Name : ${name} \n Age : ${age} \n Projects = ${diceGame}`)
+    <h1><mark>Question 2 as Assignment2</mark></h1>
+<p>Click the button to demonstrate the prompt box.</p>
 
+<button onclick="myFunction()">give your os name and version </button>
 
+<script>
+function myFunction() {
+  var OS = prompt("Please enter your OS name and version", "Android 10");
+  //var version = prompt("Please enter your Version", "10");
+  var arr = OS.split(" ");
+  console.log('The os name is ',arr[0],'and version is',arr[1]);
+  
+}
+</script>
 
-  </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
