--- a/1stassignment.html
+++ b/1stassignment.html
@@ -3,33 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 1</title>
+    <script>
+
+var num = prompt("Please enter a positive no.(i.e. no. greater than or eual to 0)")
+var arr=[];
+var i = 0;
+
+for (i=0;i<=num;i++){
+    arr.push(i)
+}
+let odd = arr.filter(el=>el%2!=0)
+let cube = odd.map(el=>el**3) 
+
+console.log(`The odd numbers are: ${odd}`)
+console.log(`The cubes of those odd numbers are: ${cube}`)
+
+    </script>
 </head>
 <body>
-    <h1 > Enter Your Name And Age </h1>
-    <form class="pure-form">
-        <input id="name" type="text" placeholder="Enter Name" onChange="inputChange(event)" onKeyUp="inputChange(event)" />
-      
-
-
-
-        <input id="data" type="text" placeholder="Enter age" onChange="inputChange(event)" onKeyUp="inputChange(event)" />
-        <button type="submit"><i class="fa fa-chevron-circle-right"></i></button>
-
-      </form>
-      <script type="text/javascript">
-        function inputChange(e) {
-         console.log(document.getElementById("name").value);
-        }
-
-
-        function sConsole(event) {
-  event.preventDefault();
-  var data = document.getElementById("data");
-  console.log(data.value);
-  
-}
-      </script>
     
 </body>
 </html>
