--- a/3rdassignment.html
+++ b/3rdassignment.html
@@ -1,22 +1,49 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 3</title>
+
+    <script>
+
+
+
+         //fetch (' https://jsonplaceholder.typicode.com/todos/')
+
+
+ //.then(response=>response.json())
+ //.then((data=>console.log(data)))
+
+ //function fetchTodo(){
+   //  const response = fetch ('https://jsonplaceholder.typicode.com/todos/');
+     //const data = response;
+
+     //console.log (data);
+ //}
+ //fetchTodo();
+
+
+
+function fetchTodo(){
+    fetch("https://jsonplaceholder.typicode.com/todos").then(response=>{console.log(response)
+     return response.json()})
+     .then(data=>{
+         console.log(data);
+         for(let i=0;i<data.length;i++){
+             if(data[i].completed==true){
+                 console.log(data[i]);
+             }
+         }
+        })
+     .catch(error=>console.log(error))
+
+}
+fetchTodo();
+
+    </script>
 </head>
 <body>
-    <h1>intro on available datatypes in javascript</h1>
-    <pre><b>JavaScript</b> has multiple <i>data types.</i> 
-        There are seven primitive data types and an object type. 
-        The seven primitive types are Boolean, null, undefined, number, BigInt, string, and symbol.
-        All of JavaScript’s primitive types are immutable, which means that they can’t be changed. 
-        The primitive types contain values that are fixed once they’re defined. 
-        The Boolean type is either true or false and represents logical entities. 
-        The null type only has one value, which is null . 
-        The null value means that it refers to some nonexistent or invalid object or address. 
-        The undefined type is unique to JavaScript. 
-        It means that a variable hasn’t been assigned any value
-    </pre>
+    
 </body>
 </html>
