--- a/3rdassignment.html
+++ b/3rdassignment.html
@@ -1,49 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3</title>
-
-    <script>
-
-
-
-         //fetch (' https://jsonplaceholder.typicode.com/todos/')
-
-
- //.then(response=>response.json())
- //.then((data=>console.log(data)))
-
- //function fetchTodo(){
-   //  const response = fetch ('https://jsonplaceholder.typicode.com/todos/');
-     //const data = response;
-
-     //console.log (data);
- //}
- //fetchTodo();
-
-
-
-function fetchTodo(){
-    fetch("https://jsonplaceholder.typicode.com/todos").then(response=>{console.log(response)
-     return response.json()})
-     .then(data=>{
-         console.log(data);
-         for(let i=0;i<data.length;i++){
-             if(data[i].completed==true){
-                 console.log(data[i]);
-             }
-         }
-        })
-     .catch(error=>console.log(error))
-
-}
-fetchTodo();
-
-    </script>
-</head>
+<html>
 <body>
-    
+<title>Assignment3</title>
+<p>Click the button to demonstrate the prompt box.</p>
+
+<button onclick="myFunction()">check eligibility</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  var age = prompt("Please enter your age", "18");
+  if (age >=18) {
+    document.getElementById("demo").innerHTML =
+    "you are"+ age + "year old so you can drink";
+  }
+  else{
+  document.getElementById("demo").innerHTML =
+    "you are"+ age + " year old you cannot drink";
+  }
+}
+</script>
+
 </body>
 </html>
